# mtg-ai-agent

./: .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
.github/: build-deploy.yaml
.github/workflows/: build-deploy.yaml
app/: chainlit.md  chainlit_fr-FR.md  entrypoint.py
app/.chainlit/: config.toml
app/.chainlit/translations/: fr-FR.json
app/agent/: config.py  graph.py  tools.py  types.py
app/agent/conditions/: grade_documents.py
app/agent/nodes/: node_agent.py  node_generator.py  node_rewriter.py  node_trim_history.py
app/agent/tools/: tool_mtg_card.py  tool_mtg_rules.py
app/public/: custom.css  theme.json
data/: MagicCompRules_2020250207.chunks.json  MagicCompRules_2020250207.txt
data/MagicCompRules_2020250207.vectorstore/: index.pkl
letsencrypt/: acme.json
scripts/: build_vector_store.py  plot_graph.py
tests/: test_graph.py  test_tools.py  test_trim_history.py
utils/: create_env.sh  create_env_file.sh
